[package]
name = "downloader"
version = "1.3.0"
edition = "2021"
authors = ["Rayr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[dependencies]
reqwest = "0.11.7"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
